@@ -592,11 +592,25 @@ def test_view_doesnt_shadow_attribute():
 
     However, acquired attributes *should* be shadowed. See discussion on
     http://codespeak.net/pipermail/z3-five/2006q2/001474.html
-    
+
       >>> manage_addIndexSimpleContent(self.folder, 'mouse', 'Mouse')
       >>> self.folder.ftf.unrestrictedTraverse('mouse')()
       u'The mouse has been eaten by the eagle'
-      
+
+    Head requests have some unusual behavior in Zope 2, in particular, a failed
+    item lookup on an ObjectManager returns a NullResource, rather
+    than raising a KeyError.  We need to make sure that this doesn't
+    result in acquired attributes being shadowed by the NullResource,
+    but that unknown names still give NullResources:
+
+      >>> self.app.REQUEST.maybe_webdav_client = True
+      >>> self.app.REQUEST['REQUEST_METHOD'] = 'HEAD'
+      >>> self.folder.ftf.unrestrictedTraverse('mouse')()
+      u'The mouse has been eaten by the eagle'
+      >>> self.folder.ftf.unrestrictedTraverse('nonsense')
+      <webdav.NullResource.NullResource object at ...>
+
+
     Clean up:
 
       >>> from zope.app.testing.placelesssetup import tearDown
